{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 105,
  "lineage": "daddc749-29d6-2d97-20f3-f9fa4fcf4d08",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkInterfaces/nic_private",
            "internal_domain_name_suffix": "vrbg1cjfyloupoff0hmqp20wxb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/privatesubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-35-0B-6F",
            "name": "nic_private",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "tutorialnetwork",
            "virtual_machine_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Compute/virtualMachines/vm_private"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkInterfaces/nic_public",
            "internal_domain_name_suffix": "vrbg1cjfyloupoff0hmqp20wxb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/publicIPAddresses/publicip",
                "subnet_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/publicsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-FF-13-ED",
            "name": "nic_public",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "tutorialnetwork",
            "virtual_machine_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Compute/virtualMachines/vm_public"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_private",
            "location": "eastus",
            "name": "nsg_private",
            "resource_group_name": "tutorialnetwork",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.nic_private",
            "azurerm_network_interface.nic_public",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_public",
            "location": "eastus",
            "name": "nsg_public",
            "resource_group_name": "tutorialnetwork",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/publicIPAddresses/publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.184.144",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip",
            "resource_group_name": "tutorialnetwork",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/privatesubnet",
            "name": "privatesubnet",
            "resource_group_name": "tutorialnetwork",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/publicsubnet",
            "name": "publicsubnet",
            "resource_group_name": "tutorialnetwork",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/publicsubnet",
            "network_security_group_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_public",
            "subnet_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/publicsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_public",
            "azurerm_resource_group.rg",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/privatesubnet",
            "network_security_group_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_private",
            "subnet_id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/privatesubnet"
          },
          "dependencies": [
            "azurerm_network_interface.nic_private",
            "azurerm_network_interface.nic_public",
            "azurerm_network_security_group.nsg_private",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "896d42ac-c225-47dd-b8a5-d1d907f356b9",
            "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "eastus",
            "name": "vnet",
            "resource_group_name": "tutorialnetwork",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/publicsubnet",
                "name": "publicsubnet",
                "security_group": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_public"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/virtualNetworks/vnet/subnets/privatesubnet",
                "name": "privatesubnet",
                "security_group": "/subscriptions/2de1d9ff-921c-4636-a0a0-70113348ca72/resourceGroups/tutorialnetwork/providers/Microsoft.Network/networkSecurityGroups/nsg_private"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}